// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inverted Index should tokenize a directory 1`] = `
[
  "src/test_data/lorem-ipsum-2.txt",
  "src/test_data/lorem-ipsum.txt",
  "src/test_data/lorem-ipsum.txt",
  "src/test_data/lorem-ipsum.txt",
  "src/test_data/lorem-ipsum.txt",
  "src/test_data/lorem-ipsum.txt",
]
`;

exports[`Inverted Index should tokenize a directory 2`] = `
[
  "src/test_data/lorem-ipsum.txt",
]
`;
